--- a/app/views/surveys/_fp.html.haml
+++ b/app/views/surveys/_fp.html.haml
@@ -1,4 +1,4 @@
-- title 'Fraction of Stars Which Develop Planets'
+- title 'Fraction of Stars that Develop Planets'
 
 %h3 How many suitable stars actually form a solar system with planets in it?
 
@@ -11,24 +11,24 @@
     %dt.bullet 
       = main_point "As of August 2009, we have found 357 planets around 300 different stars"
     %dd.detail
-      %p We found the first planet orbiting another star in 1995. Since that time, we have found many more planets orbiting many more stars. We can find these planets by watching for the stars light output to drop slightly when the planet passes in front of it, this is called the <i>Transit Method</i>. We can also watch for the star to wobble in response to the planets movement. If we detect actual motion of the star is it call <i>Astrometric Measurement</i>, and if we detect a doppler shift in the star's light it is called the <i>Radial Velocity Method</i>.
+      %p We found the first planet orbiting another star in 1995. Since that time, we have found many more planets orbiting many more stars. We can find these planets by observing the stars' light output drop slightly when the planet passes in front of it. This is called the <i>Transit Method</i>. We can also watch for the star to wobble in response to the planet's movement. If we detect actual motion of the star it is called <i>Astrometric Measurement</i>, and if we detect a doppler shift in the star's light it is called the <i>Radial Velocity Method</i>.
       = image_tag 'transit_method.png', :title => 'Transit Method', :style => 'width: 400px;'
     %dt.bullet
-      = main_point "Hot Jupiters Are Easy to Find"
+      = main_point "Hot Jupiters are easy to find"
     %dd.detail
-      %p All of the techniques we have today make it easier to find more massive planets close to their parent stars. We call these planets <i>Hot Jupiters.</i> It is believed that these planets formed away from their sun and then moved closer through a process called <i>planetary migration.</i>
+      %p All of the techniques we have today make it easier to find more massive planets close to their parent stars. We call these planets <i>Hot Jupiters</i>. It is believed that these planets formed away from their sun and then moved closer through a process called <i>planetary migration</i>.
     %dt.bullet
       = main_point "Current Technology Sets a Lower Bound of 10%"
     %dd.detail
       %p
-        With current techniques we are finding planets around about 10% of the stars we investigate. However, this seems to be mostly a limit of technology not planets. Every technological improvement pulls out more planets. The real value of 
+        With current techniques we are finding planets around about 10% of the stars we investigate. However, this seems to be mostly a limit of technology, not planets. Every technological improvement enables us to discover more planets. The real value of 
         = drake_planets
         is undoubtedly much higher than this.
     %dt.bullet
       = main_point "The Kepler Space Telescope is Searching for Earth Like Planets"
     %dd.detail
       %p 
-        Launched in March of 2008, Kepler is just getting settled into its science mission. Kepler is the first telescope capable of finding Earth sized planets in habitable orbits around other stars. Kepler will spend its 3-year mission observing one small section of the sky, looking for these planets. In three years it should have a really solid estimate of the fraction of stars with planets in that area of our galaxy. From that we can estimate
+        Launched in March 2008, Kepler is just getting settled into its science mission. Kepler is the first telescope capable of finding Earth-sized planets in habitable orbits around other stars. Kepler will spend its three-year mission observing one small section of the sky, looking for these planets. In three years it should have a very solid estimate of the fraction of stars with planets in that area of our galaxy. From that we can estimate
         = drake_planets
         for the rest of the galaxy.
     %dt.bullet
