--- a/app/views/surveys/_fc.html.haml
+++ b/app/views/surveys/_fc.html.haml
@@ -7,16 +7,16 @@
     %span.caption Three radio telescopes. Courtesy NASA.
   %dl
     %dt.bullet
-      = main_point 'Will Radio be Discovered?'
+      = main_point 'Will radio be discovered?'
     %dd.detail
-      %p Is it inevitable that advanced tool use leads to the discovery of radio, or did we get lucky. There are lots of communication mechanisms that don't reach out to the stars, a civilization could go far without radio. We are already moving away from radio ourselves. Cable TV and telephone wires are dominant medium and long distance communication channels, replacing broadcast TV and two way radios. Radio signals are now used for short range communications between wireless devices and the wired communication backbone.
-      %p On the other hand, any in depth study of another part of the electromagnetic spectrum (light, X-Rays, etc) should eventually lead to radio.
+      %p Is it inevitable that advanced tool use leads to the discovery of radio, or did we get lucky? There are lots of communication mechanisms that don't reach out to the stars. A civilization could go far without radio. We are already moving away from radio ourselves. Cable TV and telephone wires are the dominant medium and long distance communication channels, replacing broadcast TV and two-way radios. Radio signals are now used for short range communications between wireless devices and the wired communication backbone.
+      %p On the other hand, any in-depth study of another part of the electromagnetic spectrum (light, X-Rays, etc.) should eventually lead to radio.
     %dt.bullet
-      = main_point 'Would They Choose to Communicate?'
+      = main_point 'Would they choose to communicate?'
     %dd.detail
-      %p There is a tremendous amount of cultural diversity on this planet. It is easy to imagine a culture that would choose not to communicate with an alien species. Its not even clear that we would communicate with another species if the opportunity presented itself. There could be a lot at risk.
+      %p There is a tremendous amount of cultural diversity on this planet. It is easy to imagine a culture that would choose not to communicate with an alien species. It's not even clear that we would communicate with another species if the opportunity presented itself. There could be a lot at risk.
     %dt.bullet
-      = main_point 'More Information'
+      = main_point 'More information'
     %dd.detail
       %ul
         %li= info_link 'Electromagnetic Spectrum', 'http://imagine.gsfc.nasa.gov/docs/science/know_l1/emspectrum.html'
