--- a/app/views/surveys/_fl.html.haml
+++ b/app/views/surveys/_fl.html.haml
@@ -8,22 +8,22 @@
       Thermophile bacteria color a hot spring. Courtesy National Park Service.
   %dl
     %dt.bullet
-      = main_point "Very Little Data to Examine"
+      = main_point "Very little data to examine"
     %dd.detail
-      %p This parameter, and the ones to come, are largely speculation due to the lack of data. We only know of one planet where life has started and we know very little about the processes that kicked it all off. It is possible that life is easy and it inevitably starts when conditions are right. It is also possible that it is hard and we are very lucky to be here at all.
+      %p This parameter, and the ones to come, are largely speculation due to the lack of data. We only know of one planet where life has started &mdash; Earth &mdash; and we know very little about the processes that kicked it all off. It is possible that life is easy and it inevitably starts when conditions are right. It is also possible that it is hard and we are very lucky to be here at all.
       %p There are many efforts underway to look for life on other planets, especially Mars, and to probe the origins of life on this planet. We can only hope that an answer begins to emerge soon.
     %dt.bullet
-      = main_point "An Earlier Start Could Imply Life is More Likely Elsewhere?"
+      = main_point "Does an earlier start imply that life is more likely elsewhere?"
     %dd.detail
-      %p If life is hard one would expect it to take a long time to get started. On the other hand, if it is easy, it could happen in a shorter period of time. In probabilistic terms you would expect to win a series of coin tosses faster than winning the lottery.
+      %p If life is hard, one would expect it to take a long time to get started. On the other hand, if it is easy, it could happen in a shorter period of time. In probabilistic terms you would expect to win a series of coin tosses faster than winning the lottery.
       %p On the other hand, it is possible, though unlikely, to win the lottery first. So, from a sample of only this planet, we cannot say anything conclusively on this subject. We can only assume that we are average and make a guess from there.
     %dt.bullet
-      = main_point "The Earth is 4.5 Billion Years Old and the Oldest Fossils are 3.8 Billion Years Old"
+      = main_point "The Earth is 4.5 billion years old, and the oldest fossils are 3.8 billion years old"
     %dd.detail
-      %p The Earth is essentially as old as the solar system, and we have found rocks dating back 4.5 billion years. We have also found fossils of single celled organisms dating back 3.8 billion years. This implies that life took less than 800 million years to get started.
+      %p The Earth is essentially as old as the solar system, and we have found rocks dating back 4.5 billion years. We have also found fossils of single-celled organisms dating back 3.8 billion years. This implies that life took less than 800 million years to get started.
       %p 800 million out of 4.5 billion is tough to imagine. If the Earth's 4.5 billion years was packed into one day, life would have been established and growing by 4:30 in the morning.
     %dt.bullet
-      = main_point "More Information"
+      = main_point "More information"
     %dd.detail
       %ul
         %li= info_link 'Wikipedia Timeline of Evolution', 'http://en.wikipedia.org/wiki/Timeline_of_evolution'
