--- a/app/views/surveys/_l.html.haml
+++ b/app/views/surveys/_l.html.haml
@@ -10,14 +10,14 @@
     %dt.bullet
       = main_point 'When do we start counting?'
     %dd.detail
-      %p Has our civilization been around for 6,000 years (Ancient Egypt)? 200 years (the birth of America)? That's a big difference and it matters to the end result. The real point of interest is the discovery of radio. That marks a technological level sufficient to communicate. For us, that is about 100 years. So far...
+      %p Has our civilization been around for 6,000 years (Ancient Egypt)? 200 years (the birth of America)? That's a big difference and it matters to the end result. The real point of interest is the discovery of radio. That marks a technological level sufficient to communicate. For us, that is about 100 years. So far&hellip;
     %dt.bullet
       = main_point 'What is the end?'
     %dd.detail
-      %p Great civilizations have collapsed many times in hour history. But for <i>human civilization</i> as a whole, these have only been set backs. We may lose some culture or technology, but it always comes back and gets even more advanced in the next rise to power.
-      %p A similar set back in the future would not be the end of our ability to communicate. The end is really the extinction, or near extinction, of <i>homo sapiens</i> as a species. Losses sufficient to halt the transmission of culture from one generation to the next. How long until that happens?
+      %p Great civilizations have collapsed many times in hour history. But for <em>human civilization</em> as a whole, these have only been setbacks. We may lose some culture or technology, but it always comes back and gets even more advanced in the next rise to power.
+      %p A similar setback in the future would not be the end of our ability to communicate. The end is really the extinction, or near extinction, of <i>homo sapiens</i> as a species &mdash; losses sufficient to halt the transmission of culture from one generation to the next. How long until that happens?
     %dt.bullet
-      = main_point 'More Information'
+      = main_point 'More information'
     %dd.detail
       %ul
         %li= info_link 'Asteroid and Comet Impacts', 'http://impact.arc.nasa.gov/'
