--- a/app/views/surveys/_ne.html.haml
+++ b/app/views/surveys/_ne.html.haml
@@ -5,21 +5,21 @@
   .illustration
     = image_tag 'wet_mars.jpg', :title => 'Mars at it might have looked 3.5 billion years ago.'
     %span.caption
-      Mars at it might have looked 3.5 billion years ago. Courtesy NASA/Greg Shirah.
+      Mars as it might have looked 3.5 billion years ago. Courtesy NASA/Greg Shirah.
   %dl
     %dt.bullet
-      = main_point "Earthlike Means Liquid Water"
+      = main_point "Earthlike means liquid water"
     %dd.detail
-      %p Here on Earth, there seems to be one universal requirement for life, liquid water. From black smokers at the bottom of the ocean to water pockets miles underground to glacial melt in Anartica, everywhere we find liquid water we find thriving colonies of bacteria. These colonies often anchor entire ecosystems of high organisms living in improbable places.
-      %p This may seem like a very Earth-centric view. It is certainly possible that life could exist in chemicals other than water. However, there is no evidence for life without water. Furthermore, when it  comes to looking for suitable planets we need to make some assumptions or the search becomes too broad.
+      %p Here on Earth, there seems to be one universal requirement for life: liquid water. From black smokers at the bottom of the ocean to water pockets miles underground to glacial melt in Antarctica, everywhere we find liquid water we find thriving colonies of bacteria. These colonies often anchor entire ecosystems of high organisms living in improbable places.
+      %p This may seem like a very Earth-centric view. It is certainly possible that life could exist in chemicals other than water. However, there is no evidence for life without water. Furthermore, when it comes to looking for suitable planets we need to make some assumptions or the search becomes too broad.
     %dt.bullet
-      = main_point "How Many in Our Solar System, One or Two?"
+      = main_point "How many in our own Solar System?"
     %dd.detail
-      %p There is one obvious planet in our solar system that has liquid water, Earth. However, we know that Mars once had salt water oceans. The rovers Spirit and Opportunity were sent to Mars seeking evidence for ancient water. Their successful missions have changed the way we look at our solar system.
+      %p There is one obvious planet in our solar system that has liquid water: Earth. However, we know that Mars once had salt water oceans. The rovers Spirit and Opportunity were sent to Mars seeking evidence for ancient water. Their successful missions have changed the way we look at our solar system.
     %dt.bullet
-      = main_point "Don't Forget About Moons"
+      = main_point "Don't forget about moons"
     %dd.detail
-      %p Since the Drake Equation was first proposed it has become clear that we need to look beyond planets. Jupiter's moon Europa and Saturn's moon Encladus are both believed to have liquid oceans under a thick ice crust. The tidal pull of these moons' planets provides the energy to keep the water from freezing. This energy <i>could</i> support life.
+      %p Since the Drake Equation was first proposed it has become clear that we need to look beyond planets. Jupiter's moon Europa and Saturn's moon Enceladus are both believed to have liquid oceans under a thick ice crust. The tidal pull of these moons' planets provides the energy to keep the water from freezing. This energy <em>could</em> support life.
       = image_tag 'europa.gif', :title => "Cracks in Europa's icy crust. Image courtesy NASA, Voyager 2, 1979", :style => 'width: 350px;'
     %dt.bullet
       = main_point "More Information"
