--- a/app/views/surveys/_r_star.html.haml
+++ b/app/views/surveys/_r_star.html.haml
@@ -16,7 +16,7 @@
       %p We have a lot of observational evidence of star formation in action. We also have good evidence for the number of stars in the galaxy (400 billion) and its age (up to 13 billion years), this gives us several ways to calculate an average rate.
 
     %dt.bullet 
-      = main_point "Simple calculation: 400 billion stars/13 billion years"
+      = main_point "A simple calculation: 400 billion stars/13 billion years"
     %dd.detail
       %p Estimates of the number of stars in our galaxy are between 200 and 600 billion stars, it is hard to count them, so we estimate based on the observed weight of the galaxy. You can comfortably pick any number in this range, but 400 billion seems to be a commonly used value.
       %p
