Front page content

--- a/app/stylesheets/main.sass
+++ b/app/stylesheets/main.sass
@@ -403,3 +403,13 @@ dd.detail
 
 .bullets
   +clearfix
+
+#plaque
+  float: right
+  margin-left: 1em
+  position: relative
+  right: -0.5em
+  top: -0.37em
+
+  
+  / +border_radius(.25em)
