--- a/app/views/shared/_survey_prompt.html.haml
+++ b/app/views/shared/_survey_prompt.html.haml
@@ -1,7 +1,8 @@
 - form_for Survey.new do |f|
   %p.start-survey-prompt 
     %a{ :href => '#' }
-      Calculate how many intelligent civilizations
+      = image_tag 'pioneer_plaque.jpg', :width => 150, :title => "Is anybody out there to find Pioneer's gold plaque?", :id => 'plaque'
+      How many intelligent civilizations do
       %em you
-      think there are in our galaxy.
+      think there are?
       %strong Get started now.
