Normalized relationship between parameters and rationals.

--- a/app/stylesheets/main.sass
+++ b/app/stylesheets/main.sass
@@ -251,6 +251,10 @@ blockquote.signage
       padding: 1em
       background: #a2cb52 url(/images/gradient-green2.png) repeat-x
       border: 1px solid #5c992e
+
+      fieldset.parameter
+        label, select
+          display: none
       
       p
         color: #222
