Unobtrusive JS on educational content

--- a/app/stylesheets/main.sass
+++ b/app/stylesheets/main.sass
@@ -385,7 +385,7 @@ dt.bullet
   font-weight: bold
   display: list-item
   list-style-type: square
-dd.detail
+body.js dd.detail
   display: none
   
 .illustration
