--- a/app/views/surveys/edit.html.haml
+++ b/app/views/surveys/edit.html.haml
@@ -1,5 +1,7 @@
 :javascript
   $(function(){
+    $('.bullets dd.detail').hide();
+    
     $('dt.bullet a').click(function(e){
       $(this).parent().next().slideToggle();
       e.preventDefault();
