--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,5 +1,5 @@
 !!!Strict
-%html{:xmlns => 'http://www.w3.org/1999/xhtml', :lang => 'en'}
+%html{:xmlns => 'http://www.w3.org/1999/xhtml', :lang => 'en' }
   %head
     %title= [Settings.app_name, yield(:title)].compact.join(' - ')
     %meta{'http-equiv' => 'Content-Type', :content => 'text/html; charset=utf-8'}
@@ -20,7 +20,10 @@
     = javascript_include_tag 'application'
     = partial '/shared/disqus_variables'
     
-  %body{:lang => 'en'}
+  %body{:lang => 'en', :class => 'nojs'}
+    :javascript
+      $('body').removeClass('nojs').addClass('js');
+  
     #page
       .banner
         %h1
