--- a/app/views/users/_user_account_header.html.haml
+++ b/app/views/users/_user_account_header.html.haml
@@ -1,6 +1,6 @@
 #this-is-you
   %strong This is your profile.
-  You can refer your students to #{link_to 'this page', current_object}
+  You can refer your students to #{link_to "this page ( #{user_url(current_object)} )", current_object}
   to record their answers and to view results.
 
 %p
