Minor tweak to mail template.

--- a/app/views/clearance_mailer/change_password.html.erb
+++ b/app/views/clearance_mailer/change_password.html.erb
@@ -2,7 +2,7 @@ You notified Quest For Life that you forgot your password. You can use the follo
 
 <%= edit_user_password_url(@user, :token => @user.token, :escape => false) %>
 
-If you didn't request this, ignore this email. Don't worry. Your password hasn't been changed.
+If you didn't request this, ignore this email. Don't worry. Your password hasn't been changed. Please feel free to contact us if you have any questions.
 
 Thanks,
 Quest For Life Team
