--- a/app/views/clearance_mailer/change_password.html.erb
+++ b/app/views/clearance_mailer/change_password.html.erb
@@ -1,6 +1,6 @@
 You notified Quest For Life that you forgot your password. You can use the following link to change your it:
 
-<%= edit_user_password_url(@user, :token => @user.token, :escape => false) %>
+<%= edit_user_password_url(@user.id, :token => @user.token, :escape => false) %>
 
 If you didn't request this, ignore this email. Don't worry. Your password hasn't been changed. Please feel free to contact us if you have any questions.
 
