--- a/app/stylesheets/main.sass
+++ b/app/stylesheets/main.sass
@@ -237,6 +237,9 @@ blockquote.signage
       color: #3ac1ff
       &:hover
         text-decoration: underline
+      &.ui-slider-handle
+        &:hover
+          text-decoration: none
         
     a[target~='_blank']:after
       content: ' (external link)'
