tweet seeding and uservoice widget added

--- a/app/stylesheets/main.sass
+++ b/app/stylesheets/main.sass
@@ -184,7 +184,7 @@ blockquote.signage
         img
           display: block
           margin-bottom: .3em
-        +rounded_button("/images/alpha_gradient.png", "#9AE4E8", "94px", "70%", "#333", "0 6px", "2px 2px 8px #000", "#0084B4")
+        +rounded_button("/images/twitter_gradient.png", "#9ae4e8", "94px", "70%", "#333", "0 6px", "2px 2px 8px #000", "#0084B4")
 
 #content
 
