--- a/app/views/surveys/show.html.haml
+++ b/app/views/surveys/show.html.haml
@@ -2,10 +2,10 @@
   = h current_object.inspect
 
   
-%p.tweet-result
+%p
   Spread the word:
-  
-  %a{:href => 'http://www.twitter.com/home/', :target => "_new"}
+%p.tweet-result
+  %a{:href => 'http://www.twitter.com/home?status=I+found+N+alien+civilzations+at+quest-for-life.org', :target => "_new"}
     = image_tag 'twitter_logo.png', :alt => '', :size => '80x18' 
     Post your result to your 
     %strong Twitter account
