--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -48,7 +48,7 @@
                 Vote for this site at Rails Rumble 2009
                 
             %p.twitter
-              %a{:href => 'http://www.twitter.com/home/', :target => "_blank"}
+              %a{:href => 'http://www.twitter.com/home?status=See+how+many+alien+civilizations+you+can+find+at+quest-for-life.org', :target => "_blank"}
                 = image_tag 'twitter_logo.png', :alt => '', :size => '80x18' 
                 Post to your Twitter account
 
@@ -66,3 +66,5 @@
         %p
           == Copyright &copy; #{Date.today.year}, 
           == #{link_to 'The Alienators', 'http://r09.railsrumble.com/teams/the-alienators'}.
+
+    = render :partial => '/layouts/uservoice'
