Added GA tracking.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -68,3 +68,4 @@
           == #{link_to 'The Alienators', 'http://r09.railsrumble.com/teams/the-alienators'}.
 
     = render :partial => '/layouts/uservoice'
+    = render :partial => '/layouts/ga_tracking'
