session/new page de-tableized

--- a/app/stylesheets/main.sass
+++ b/app/stylesheets/main.sass
@@ -259,12 +259,13 @@ blockquote.signage
           margin-bottom: .3em
         +rounded_button("/images/twitter_gradient.png", "#9ae4e8", "320px", "140%", "#4f8a9e", "6px 6px", "2px 2px 8px #000", "#0084B4")
   
-
+    #password_form,
     #participate
       float: left
       width: 46%
     #teachers
       margin-left: 55%
+    
       
     #form
       +border_radius(.5em)
