changed doctype to transitional to validate, changed content width to 900 from 960

--- a/app/stylesheets/main.sass
+++ b/app/stylesheets/main.sass
@@ -195,7 +195,7 @@ blockquote.signage
     top: 0
     
   color: #fff
-  +clearfix
+  +pie-clearfix
   font-family: 'Mank Sans', Helvetica, 'Arial Narrow', Arial, Verdana, Georgia, 'Times New Roman', Serif
   position: relative
   +width_constraints
