--- a/app/views/shared/_disqus_variables.html.haml
+++ b/app/views/shared/_disqus_variables.html.haml
@@ -1,4 +1,4 @@
-%script
+%script{:type => 'text/javascript'}
   //var disqus_identifier = #{@parameter.to_json};
   - if @parameter.present?
     var disqus_url = #{[Settings.base_url, 'equation', @parameter].join('/').to_json};
