moved survey_start partial inside parameter partials for layout purposes

--- a/app/stylesheets/main.sass
+++ b/app/stylesheets/main.sass
@@ -167,9 +167,11 @@ blockquote.signage
         width: 108px
         -moz-box-shadow: 2px 2px 8px #000
     &.rumble
-      display: none
       font-size: 12px
+      position: fixed
+      right: 0
       text-align: center
+      top: 0
       
       img
         display: block
@@ -270,6 +272,7 @@ blockquote.signage
     #form
       +border_radius(.5em)
       +pie-clearfix
+      margin-top: 1em
       padding: 1em
       background: #a2cb52 url(/images/gradient-green2.png) repeat-x
       border: 1px solid #5c992e
