--- a/app/views/surveys/_fc.html.haml
+++ b/app/views/surveys/_fc.html.haml
@@ -22,3 +22,5 @@
         %li= info_link 'Electromagnetic Spectrum', 'http://imagine.gsfc.nasa.gov/docs/science/know_l1/emspectrum.html'
         %li= info_link 'History of Radio', 'http://www.fcc.gov/omd/history/radio/'
         %li= info_link 'Radio Telescopes', 'http://www.nrao.edu/index.php/learn/radioastronomy/radiotelescopes'
+        
+  = make_survey_prompt        
