--- a/app/views/surveys/_fi.html.haml
+++ b/app/views/surveys/_fi.html.haml
@@ -30,3 +30,5 @@
         %li= info_link 'Convergent Evolution', 'http://www.pbs.org/wgbh/evolution/library/01/4/l_014_01.html'
         %li= info_link 'Dolphin Culture', 'http://www.world-science.net/exclusives/080807_dolphin.htm'
         %li= info_link 'Dolphin Tool Use', 'http://www.nytimes.com/2005/12/11/magazine/11ideas1-14.html'
+        
+  = make_survey_prompt        
