--- a/app/views/surveys/_fl.html.haml
+++ b/app/views/surveys/_fl.html.haml
@@ -29,3 +29,5 @@
         %li= info_link 'Wikipedia Timeline of Evolution', 'http://en.wikipedia.org/wiki/Timeline_of_evolution'
         %li= info_link 'Comet Impacts and Life', 'http://www.space.com/scienceastronomy/solarsystem/comet_life_010405.html'
         %li= info_link "Miller/Urey Experiment", 'http://www.chem.duke.edu/~jds/cruise_chem/Exobiology/miller.html'
+        
+  = make_survey_prompt
