--- a/app/views/surveys/_fp.html.haml
+++ b/app/views/surveys/_fp.html.haml
@@ -38,4 +38,5 @@
         %li= info_link 'Planet Quest', 'http://planetquest.jpl.nasa.gov/'
         %li= info_link 'Planetary Migration', 'http://www2.ess.ucla.edu/~jewitt/kb/migrate.html'
         %li= info_link 'Kepler Mission', 'http://kepler.nasa.gov/'
-  
+
+  = make_survey_prompt
