--- a/app/views/surveys/_l.html.haml
+++ b/app/views/surveys/_l.html.haml
@@ -23,4 +23,4 @@
         %li= info_link 'Asteroid and Comet Impacts', 'http://impact.arc.nasa.gov/'
         %li= info_link 'Human Extinction', 'http://en.wikipedia.org/wiki/Human_extinction'
       
-      
+  = make_survey_prompt
