--- a/app/views/surveys/_r_star.html.haml
+++ b/app/views/surveys/_r_star.html.haml
@@ -40,3 +40,5 @@
         %li= info_link 'Why use the Rate of formation instead of the number of stars', 'http://www.setileague.org/askdr/rstar.htm'
         %li= info_link "Wikipedia article about our galaxy's age and composition", 'http://en.wikipedia.org/wiki/Milky_Way'
         %li= info_link "Stellar classification", 'http://en.wikipedia.org/wiki/Stellar_classification'
+
+  = make_survey_prompt
