--- a/app/views/surveys/_ne.html.haml
+++ b/app/views/surveys/_ne.html.haml
@@ -30,3 +30,5 @@
         %li= info_link 'Mars Ocean', 'http://www.sciencedaily.com/releases/2007/06/070613131912.htm'
         %li= info_link 'Europa', 'http://www.solarviews.com/eng/europa.htm'
         %li= info_link 'Encladus', 'http://science.nasa.gov/headlines/y2006/09mar_enceladus.htm'
+  
+  = make_survey_prompt
