--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -64,6 +64,8 @@
     
       #footer
         %p
+          = partial 'layouts/footer_menu'
+        %p
           == Copyright &copy; #{Date.today.year}, 
           == #{link_to 'The Alienators', 'http://r09.railsrumble.com/teams/the-alienators'}.
 
