--- a/app/stylesheets/main.sass
+++ b/app/stylesheets/main.sass
@@ -136,13 +136,16 @@ body
   text-align: center
   font-size: 11px
   font-family: arial, sans-serif
-  color: #171a35
+  color: #fff
   .menu
     font-size: 120%
   a
-    color: #141830
-    font-weight: bold
-    text-decoration: none
+    color: #3ac1ff
+    &:hover
+      text-decoration: underline
+    &.ui-slider-handle
+      &:hover
+        text-decoration: none
 
 blockquote.signage
   /float: right
