--- a/app/views/layouts/_footer_menu.html.haml
+++ b/app/views/layouts/_footer_menu.html.haml
@@ -12,3 +12,6 @@
   |
   = link_to 'Rails Rumble', 'http://r09.railsrumble.com/', :target => '_blank'
   |
+  - if current_user
+    = link_to 'Logout', '/logout'
+    |  
