added rumble badge

--- a/app/stylesheets/main.sass
+++ b/app/stylesheets/main.sass
@@ -171,19 +171,17 @@ blockquote.signage
         width: 108px
         -moz-box-shadow: 2px 2px 8px #000
     &.rumble
-      font-size: 12px
-      position: fixed
-      right: 0
-      text-align: center
-      top: 0
-      
-      img
-        display: block
-        height: 108px
-        margin-bottom: .5em
-        width: 108px
       a
-        color: #000
+        background: url(/images/rumble-badge.png) no-repeat 0 0
+        display: block
+        height: 102px
+        position: fixed
+        right: 0
+        text-indent: -800em
+        top: 0
+        width: 103px
+        &:focus
+          -moz-outline: none
     
     &.twitter
       a
