--- a/app/views/surveys/_demographics.html.haml
+++ b/app/views/surveys/_demographics.html.haml
@@ -11,11 +11,12 @@
     = hidden_field_tag :demographics, 'true'
     - form.inputs do      
       = form.input :city
-      = form.input :state
+      = form.input :state, :label => 'State/Province'
       = form.input :country, :as => :country, :include_blank => true
       = form.input :gender, :as => :select, :collection => ['Male', 'Female'], :include_blank => true
-      = form.input :age_group_id, :as => :select, :include_blank => true, :label_method => :description
+      = form.input :age_group_id, :label => 'Age', :as => :select, :include_blank => true, :label_method => :description
       = form.input :twitter_username
     - form.buttons do
-      = form.commit_button 'Next'
-  
+      = form.commit_button 'Finish'
+    .humanized-value
+      Calculate my estimate!
