--- a/app/views/surveys/_l.html.haml
+++ b/app/views/surveys/_l.html.haml
@@ -1,9 +1,10 @@
 - title "Life Expectancy of an Advanced Society"
+
 %h3 How many years can an advanced society survive?
 
-%div.bullets
+.bullets
   .illustration
-    = image_tag 'impact.jpg', :class => 'illustration', :title => "Artist's conception of an asteroid impact."
+    = image_tag 'impact.jpg', :title => "Artist's conception of an asteroid impact."
     %span.caption
       Artist's conception of an asteroid impact. Image courtesy NASA.
   %dl
