--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,7 +4,6 @@
     %title= [Settings.app_name, yield(:title)].compact.join(' - ')
     %meta{'http-equiv' => 'Content-Type', :content => 'text/html; charset=utf-8'}
     %link{:rel => 'shortcut icon', :href => '/favicon.ico'}
-    = stylesheet_link_tag 'compiled/main.css', 'compiled/screen.css', :media => 'screen, projection'
     = stylesheet_link_tag 'compiled/print.css', :media => 'print'
     /[if lt IE 8]
       = stylesheet_link_tag 'compiled/ie.css', :media => 'screen, projection'
@@ -14,10 +13,18 @@
       = stylesheet_link_tag 'compiled/ie8.css', :media => 'screen, projection'
     = stylesheet_link_tag 'sunny/jquery-ui-1.7.2.custom.css'
     = stylesheet_link_tag 'ui.slider.extras'
+    = stylesheet_link_tag 'visualize.jQuery.css'
+    = stylesheet_link_tag 'compiled/main.css', 'compiled/screen.css', :media => 'screen, projection'
+    
     = javascript_include_tag 'jquery-1.3.2.min.js'
     = javascript_include_tag 'jquery-ui-1.7.1.custom.min.js'
     = javascript_include_tag 'selectToUISlider.jQuery.js'
     = javascript_include_tag 'DD_roundies.uicornerfix.js'
+
+    /[if IE]
+      = javascript_include_tag 'excanvas.compiled.js'
+    = javascript_include_tag 'visualize.jQuery.js'
+
     = javascript_include_tag 'application'
     = partial '/shared/disqus_variables'
     
