Fixed login page

--- a/app/stylesheets/main.sass
+++ b/app/stylesheets/main.sass
@@ -136,11 +136,12 @@ body
   text-align: center
   font-size: 11px
   font-family: arial, sans-serif
-  color: #fff
+  color: #21254c
   .menu
     font-size: 120%
   a
-    color: #3ac1ff
+    color: #11152c
+    text-decoration: none
     &:hover
       text-decoration: underline
     &.ui-slider-handle
@@ -264,7 +265,6 @@ blockquote.signage
           margin-bottom: .3em
         +rounded_button("/images/twitter_gradient.png", "#9ae4e8", "320px", "140%", "#4f8a9e", "6px 6px", "2px 2px 8px #000", "#0084B4")
   
-    #password_form,
     #participate, #teachers
       padding: .5em 1em
       +border_radius(1em)
@@ -272,6 +272,7 @@ blockquote.signage
       background-color: #242853
       background: rgba(0,0,0,.4)
     
+    #password_form,
     #participate
       float: left
       width: 46%
