added N back to drake nav

--- a/app/stylesheets/main.sass
+++ b/app/stylesheets/main.sass
@@ -87,6 +87,9 @@ body
             display: inline-block
           text-align: center
           letter-spacing: -4px
+        dt
+          position: absolute
+          left: -999em
           
         span.operator
           margin: 0 .25em
