--- a/app/views/home/_equation.html.haml
+++ b/app/views/home/_equation.html.haml
@@ -1,7 +1,6 @@
 %dl.equation
   %dt
-    / - drake_link(drake_number, 'n', 'the number of civilizations in our galaxy in which communication is possible') 
-    / - drake_operator '='
+    The Drake Equation
   %dd
     - drake_link(drake_stars, 'r_star', 'the average rate of star formation per year in our galaxy')
     - drake_operator
@@ -22,3 +21,7 @@
     - drake_operator
   %dd
     - drake_link(drake_duration, 'l', 'the length of time such civilizations release detectable signals into space')
+    - drake_operator '='
+  %dd
+    - drake_link(drake_number, 'n', 'the number of civilizations in our galaxy in which communication is possible') 
+    
