--- a/app/views/home/about.html.haml
+++ b/app/views/home/about.html.haml
@@ -10,4 +10,4 @@
 
 %h3 This Appplication
 %p This application really started as an interactive astronomy lecture developed by <a href="/home/credits">Steven Hammond</a> and presented in schools throughout Central Massachusetts. The original lecture featured the audience learning about the different parameters then coming to consensus on a value. By the end of the talk they had their own estimate on the number of intelligent civilizations in the galaxy.
-%p This website was built for a programming contest called <a href="http://r09.railsrumble.com">Rails Rumble</a>. Four guys built it over a period of 48-hours in August, of 2009. Hopefully it will server as a proof of concept for other small, focused educational apps on a variety of topics.
+%p This website was built for a programming contest called <a href="http://r09.railsrumble.com">Rails Rumble</a>. Four guys built it over a period of 48-hours in August, of 2009. Hopefully it will serve as a proof of concept for other small, focused educational apps on a variety of topics.
