Tweaked footer menu.

--- a/app/views/layouts/_footer_menu.html.haml
+++ b/app/views/layouts/_footer_menu.html.haml
@@ -5,7 +5,7 @@
   |
   = link_to 'Privacy', '/home/privacy'
   |
-  = link_to 'Credit', '/home/credits'
+  = link_to 'Credits', '/home/credits'
   |
   = link_to 'IYA 2009', 'http://astronomy2009.org', :target => '_blank'
   |
