revised external link

--- a/app/stylesheets/main.sass
+++ b/app/stylesheets/main.sass
@@ -250,7 +250,8 @@ blockquote.signage
           text-decoration: none
         
     a[target~='_blank']:after
-      content: ' (external link)'
+      /content: ' (external link)'
+      content: url(/images/external_link.png)
       color: #ccc
       font:
         size: 90%
